completed portfolio website

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -9,10 +9,11 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    I am Sudharsanan Kirubanandhan, a software developer with 6 years of experience in blockchain and AI.</br>
+    I help businesses with blockchain and AI research, technical workshops and bootcamps, developer relations, and product development services.
+    My journey began in 2016 with a blockchain-based e-commerce project, and I have since worked with various esteemed organizations. 
+    I am passionate about teaching and believe it enhances my own learning. 
+    I enjoy conducting workshops and mentoring aspiring developers to share my knowledge and expertise.
   </div>
 
   <div class="mb-5">
@@ -21,12 +22,8 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
-    />
-    <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="B.Tech in Information Technology"
+      subtitle="2014 to 2018 at Alpha College of Engineering, Anna University, Chennai, India"
     />
   </div>
 
@@ -36,36 +33,35 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Blockchain Developer"
+      subtitle="July 2023 to February 2024 at Astra Technologies, Remote"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      Helped build the crypto infrastructure using Rust, led the development of a crypto aggregator integrating both centralized and decentralized exchanges, developed highly scalable web services in Rust using Actix and Tokio, and designed and developed web components using lit.js.
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Blockchain Developer"
+      subtitle="November 2021 to July 2023 at Guardian Link, Remote"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      Conducted deep research on optimistic and zk rollups, created a layer2 solution on top of StarkEx, developed a fully functional NFT marketplace on StarkNet with an inbuilt bridge, and was part of the team that developed a crypto wallet and web3 domains.
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Engineer"
+      subtitle="July 2018 to October 2021 at HTC Global Services, Remote"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      Created a one-click dynamic network creation tool for Hyperledger Fabric v1.4, developed a proof of concept for an import processing system using blockchain technology in R3 Corda, created a loyalty management system on top of a private Geth network, and developed chatbots for IHCL and Shoppers Stop using yellow.ai.
     </TimeLineElement>
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Certifications</div>
+    <div class="text-3xl w-full font-bold">Community Building & Training</div>
   </div>
 
   <ul class="list-disc mx-6 mb-10 grid gap-2">
-    <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
-    </li>
-    <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
-    </li>
+    <li>Trained over 30 people in blockchain basics for the Skill Development Program at Khadi Kraft, Government of India.</li>
+    <li>Conducted a blockchain workshop at SRM Institute of Technology, Kattankulathur.</li>
+    <li>Conducted a 2-day blockchain workshop at SASTRA University.</li>
+    <li>Served as a trainer and mentor at the Polkadot India Bootcamp.</li>
+    <li>Conducted a workshop at BizThon held at GUVI.</li>
   </ul>
 
   <div class="mb-5">
@@ -73,20 +69,21 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
+    <li>Rust</li>
+    <li>Go</li>
+    <li>Solidity</li>
+    <li>Node.js</li>
+    <li>Python</li>
+    <li>Hyperledger Fabric</li>
+    <li>R3 Corda</li>
+    <li>Hyperledger Besu</li>
+    <li>Ethereum</li>
+    <li>llama.cpp</li>
+    <li>transformers</li>
+    <li>Dialogflow</li>
+    <li>Microsoft Bot Framework</li>
+    <li>yellow.ai</li>
+    <li>EVM Chains</li>
+    <li>Polkadot</li>
   </ul>
 </BaseLayout>
