--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,20 +12,15 @@ const last_posts = posts.slice(0, 3);
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
     <div class="text-xl py-1">Hey there 👋</div>
-    <div class="text-5xl font-bold">I'm Manuel Ernesto</div>
+    <div class="text-5xl font-bold">I'm Sudharsanan Kirubanandhan</div>
     <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
     <div class="py-2">
       <text class="text-lg">
-        This is <b>Astrofy</b> a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS.
-        Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed. I hope you find
-        it useful!
+       I'm Sudharsanan K, a software developer with 6 years of experience in blockchain and AI. I help businesses with blockchain and AI research, technical workshops and bootcamps, developer relations, and product development services.
       </text>
     </div>
     <div class="mt-8">
-      <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-      <a href="https://github.com/manuelernestog/astrofy" target="_blank" class="btn btn-outline ml-5">
-        Get This template
-      </a>
+      <a class="btn" href="https://twitter.com/sksudharsanan" target="_blank"> Let's connect!</a>
     </div>
   </div>
 
@@ -34,28 +29,26 @@ const last_posts = posts.slice(0, 3);
   </div>
 
   <HorizontalCard
-    title="Demo Project 1"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Crypto Aggregator"
+    img="/pd1.webp"
+    desc="Developed at Astra Technologies using Rust. This project aggregates data from various cryptocurrency exchanges to provide unified information."
     url="#"
     badge="NEW"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 2"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Custodial Wallet"
+    img="/pd2.webp"
+    desc="Built at Guardian Link using Node.js and HashiCorp Vault. This project focuses on providing secure custodial wallet services."
     url="#"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 3"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Crypto Wallet"
+    img="/pd3.webp"
+    desc="Developed at Guardian Link using Node.js, SSS algorithm, Ethereum, and StarkNet. This project offers secure crypto wallet solutions."
     url="#"
-    badge="FOSS"
   />
-
   <div>
     <div class="text-3xl w-full font-bold mb-5 mt-10">Latest from blog</div>
   </div>
