--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,49 +3,130 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 ---
 
-<BaseLayout title = "Projects" sideBarActiveItemID="projects">
+<BaseLayout title="Projects" sideBarActiveItemID="projects">
   <div>
-    <div class="text-3xl w-full font-bold mb-5">Projects Header</div>
+    <div class="text-3xl w-full font-bold mb-5">Projects Developed During Employment</div>
   </div>
 
   <HorizontalCard
-    title="Demo Project 1"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Crypto Aggregator"
+    img="/pd1.webp"
+    desc="Developed at Astra Technologies using Rust. This project aggregates data from various cryptocurrency exchanges to provide unified information."
     url="#"
-    badge="NEW"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 2"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Custodial Wallet"
+    img="/pd2.webp"
+    desc="Built at Guardian Link using Node.js and HashiCorp Vault. This project focuses on providing secure custodial wallet services."
+    url="#"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="Crypto Wallet"
+    img="/pd3.webp"
+    desc="Developed at Guardian Link using Node.js, SSS algorithm, Ethereum, and StarkNet. This project offers secure crypto wallet solutions."
+    url="#"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="Web3 Domains"
+    img="/pd4.webp"
+    desc="Created at Guardian Link using Ethereum and Solidity. This project provides domain services for the decentralized web."
+    url="#"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="StarkNet NFT Marketplace"
+    img="/pd5.webp"
+    desc="Developed at Guardian Link using StarkNet, Cairo, Solidity, Ethereum, and Next.js. This project is an NFT marketplace on the StarkNet platform."
+    url="#"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="StarkEx NFT Marketplace"
+    img="/pd6.webp"
+    desc="Built at Guardian Link using StarkEx, Solidity, and Ethereum. This project provides an NFT marketplace leveraging StarkEx technology."
+    url="#"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="IHCL Chatbot"
+    img="/pd7.webp"
+    desc="Developed at HTC Global Services using Node.js and Yellow.ai. This project provides an intelligent chatbot for IHCL."
+    url="#"
+  />
+
+  <HorizontalCard
+    title="Shoppers Stop Chatbot"
+    img="/pd8.webp"
+    desc="Developed at HTC Global Services using Node.js and Yellow.ai. This chatbot provides customer support for Shoppers Stop."
+    url="#"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="Loyalty Management (POC)"
+    img="/pd9.webp"
+    desc="Built at HTC Global Services using Ethereum and Solidity. This project is a proof of concept for a loyalty management system."
+    url="#"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="Resource Sharing Between Organizations (POC)"
+    img="/pd10.webp"
+    desc="Developed at HTC Global Services using Hyperledger Fabric and CouchDB. This project involves one-click deployment with dynamic node and peer creations and integration with Open ERP."
+    url="#"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="Import Processing Dapp"
+    img="/pd11.webp"
+    desc="Built at HTC Global Services using R3 Corda and Kotlin. This dapp regularizes the bill of entry using blockchain technology."
     url="#"
   />
 
   <div>
-    <div class="text-3xl w-full font-bold mb-5 mt-10">Projects Header</div>
+    <div class="text-3xl w-full font-bold mb-5 mt-10">Hackathon Projects</div>
+  </div>
+
+  <!-- <HorizontalCard
+    title="Decentralized EdTech Platform"
+    img="/pd12.webp"
+    desc="Currently hacking for HackFS using Next.js, Lighthouse, Huddle01, and Galadriel AI. This project aims to create a decentralized education platform."
+    url="#"
+    badge="Work in Progress"
+  /> -->
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="Decentralized Email"
+    img="/pd13.webp"
+    desc="Hacked as part of ETH India using Next.js, Xmpp, Scroll, and Subgraph. This project aims to create a decentralized email platform."
+    url="#"
+  />
+
+  <div>
+    <div class="text-3xl w-full font-bold mb-5 mt-10">College Projects</div>
   </div>
 
   <HorizontalCard
-    title="Demo Project 3"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Decentralized Ecommerce Website"
+    img="/pd14.webp"
+    desc="Final year project at Alpha College of Engineering using Ethereum, Truffle, and Solidity. This project is a decentralized ecommerce platform."
     url="#"
-    badge="FOSS"
+    badge="FYP"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 4"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Student Feedback Management System"
+    img="/pd15.webp"
+    desc="Developed in 3rd year using PHP, HTML, CSS, and XAMPP. This project is a feedback management system for college use."
     url="#"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 5"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Chennaism - Travelogue Website"
+    img="/pd16.webp"
+    desc="2nd year project using XAMPP, HTML, and CSS. This project is a travelogue website for Chennai."
     url="#"
   />
 </BaseLayout>
