--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -4,107 +4,132 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 ---
 
 <BaseLayout title="Resume" sideBarActiveItemID="cv">
-  <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Profile</div>
+  <div id="resume-content" class="px-6">
+    <div class="mb-5">
+      <div class="text-4xl font-bold">Sudharsanan Kirubanandhan</div>
+      <div class="text-2xl font-semibold">Software Developer</div>
+    </div>
+
+    <div class="mb-5">
+      <div class="text-3xl w-full font-bold">Contact</div>
+    </div>
+    
+    <div class="mb-10 text-justify">
+      <p>LinkedIn: <a href="https://linkedin.com/in/sksudharsanan" target="_blank">https://linkedin.com/in/sksudharsanan</a></p>
+      <p>Phone: +91 8220819657</p>
+      <p>Twitter: <a href="https://x.com/sksudharsanan" target="_blank">https://x.com/sksudharsanan</a></p>
+      <p>GitHub: <a href="https://github.com/sksudharsanan" target="_blank">https://github.com/sksudharsanan</a></p>
+    </div>
+
+    <div class="mb-5">
+      <div class="text-3xl w-full font-bold">Profile</div>
+    </div>
+
+    <div class="mb-10 text-justify">
+      I am Sudharsanan Kirubanandhan, a software developer with 6 years of experience in blockchain and AI.</br>
+      I help businesses with blockchain and AI research, technical workshops and bootcamps, developer relations, and product development services.
+      My journey began in 2016 with a blockchain-based e-commerce project, and I have since worked with various esteemed organizations. 
+      I am passionate about teaching and believe it enhances my own learning. 
+      I enjoy conducting workshops and mentoring aspiring developers to share my knowledge and expertise.
+    </div>
+
+    <div class="mb-5">
+      <div class="text-3xl w-full font-bold">Education</div>
+    </div>
+
+    <div class="time-line-container grid gap-4 mb-10">
+      <TimeLineElement
+        title="B.Tech in Information Technology"
+        subtitle="2014 to 2018 at Alpha College of Engineering, Anna University, Chennai, India"
+      />
+    </div>
+
+    <div class="mb-5">
+      <div class="text-3xl w-full font-bold">Experience</div>
+    </div>
+
+    <div class="time-line-container mb-10">
+      <TimeLineElement
+        title="Blockchain Developer"
+        subtitle="July 2023 to February 2024 at Astra Technologies, Remote"
+      >
+        Helped build the crypto infrastructure using Rust, led the development of a crypto aggregator integrating both centralized and decentralized exchanges, developed highly scalable web services in Rust using Actix and Tokio, and designed and developed web components using lit.js.
+      </TimeLineElement>
+      <TimeLineElement
+        title="Blockchain Developer"
+        subtitle="November 2021 to July 2023 at Guardian Link, Remote"
+      >
+        Conducted deep research on optimistic and zk rollups, created a layer2 solution on top of StarkEx, developed a fully functional NFT marketplace on StarkNet with an inbuilt bridge, and was part of the team that developed a crypto wallet and web3 domains.
+      </TimeLineElement>
+      <TimeLineElement
+        title="Engineer"
+        subtitle="July 2018 to October 2021 at HTC Global Services, Remote"
+      >
+        Created a one-click dynamic network creation tool for Hyperledger Fabric v1.4, developed a proof of concept for an import processing system using blockchain technology in R3 Corda, created a loyalty management system on top of a private Geth network, and developed chatbots for IHCL and Shoppers Stop using yellow.ai.
+      </TimeLineElement>
+    </div>
+
+    <div class="mb-5">
+      <div class="text-3xl w-full font-bold">Community Building & Training</div>
+    </div>
+
+    <ul class="list-disc mx-6 mb-10 grid gap-2">
+      <li>Trained over 30 people in blockchain basics for the Skill Development Program at Khadi Kraft, Government of India.</li>
+      <li>Conducted a blockchain workshop at SRM Institute of Technology, Kattankulathur.</li>
+      <li>Conducted a 2-day blockchain workshop at SASTRA University.</li>
+      <li>Served as a trainer and mentor at the Polkadot India Bootcamp.</li>
+      <li>Conducted a workshop at BizThon held at GUVI.</li>
+    </ul>
+
+    <div class="mb-5">
+      <div class="text-3xl w-full font-bold">Skills</div>
+    </div>
+
+    <ul class="list-disc md:columns-5 columns-2 mx-6">
+      <li>Rust</li>
+      <li>Go</li>
+      <li>Solidity</li>
+      <li>Node.js</li>
+      <li>Python</li>
+      <li>Hyperledger Fabric</li>
+      <li>R3 Corda</li>
+      <li>Hyperledger Besu</li>
+      <li>Ethereum</li>
+      <li>llama.cpp</li>
+      <li>transformers</li>
+      <li>Dialogflow</li>
+      <li>Microsoft Bot Framework</li>
+      <li>yellow.ai</li>
+      <li>EVM Chains</li>
+      <li>Polkadot</li>
+    </ul>
   </div>
-
-  <div class="mb-10 text-justify">
-    I am Sudharsanan Kirubanandhan, a software developer with 6 years of experience in blockchain and AI.</br>
-    I help businesses with blockchain and AI research, technical workshops and bootcamps, developer relations, and product development services.
-    My journey began in 2016 with a blockchain-based e-commerce project, and I have since worked with various esteemed organizations. 
-    I am passionate about teaching and believe it enhances my own learning. 
-    I enjoy conducting workshops and mentoring aspiring developers to share my knowledge and expertise.
-  </div>
-
-  <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Education</div>
-  </div>
-
-  <div class="time-line-container grid gap-4 mb-10">
-    <TimeLineElement
-      title="B.Tech in Information Technology"
-      subtitle="2014 to 2018 at Alpha College of Engineering, Anna University, Chennai, India"
-    />
-  </div>
-
-  <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Experience</div>
-  </div>
-
-  <div class="time-line-container mb-10">
-    <TimeLineElement
-      title="Blockchain Developer"
-      subtitle="July 2023 to February 2024 at Astra Technologies, Remote"
-    >
-      Helped build the crypto infrastructure using Rust, led the development of a crypto aggregator integrating both centralized and decentralized exchanges, developed highly scalable web services in Rust using Actix and Tokio, and designed and developed web components using lit.js.
-    </TimeLineElement>
-    <TimeLineElement
-      title="Blockchain Developer"
-      subtitle="November 2021 to July 2023 at Guardian Link, Remote"
-    >
-      Conducted deep research on optimistic and zk rollups, created a layer2 solution on top of StarkEx, developed a fully functional NFT marketplace on StarkNet with an inbuilt bridge, and was part of the team that developed a crypto wallet and web3 domains.
-    </TimeLineElement>
-    <TimeLineElement
-      title="Engineer"
-      subtitle="July 2018 to October 2021 at HTC Global Services, Remote"
-    >
-      Created a one-click dynamic network creation tool for Hyperledger Fabric v1.4, developed a proof of concept for an import processing system using blockchain technology in R3 Corda, created a loyalty management system on top of a private Geth network, and developed chatbots for IHCL and Shoppers Stop using yellow.ai.
-    </TimeLineElement>
-  </div>
-
-  <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Community Building & Training</div>
-  </div>
-
-  <ul class="list-disc mx-6 mb-10 grid gap-2">
-    <li>Trained over 30 people in blockchain basics for the Skill Development Program at Khadi Kraft, Government of India.</li>
-    <li>Conducted a blockchain workshop at SRM Institute of Technology, Kattankulathur.</li>
-    <li>Conducted a 2-day blockchain workshop at SASTRA University.</li>
-    <li>Served as a trainer and mentor at the Polkadot India Bootcamp.</li>
-    <li>Conducted a workshop at BizThon held at GUVI.</li>
-  </ul>
-
-  <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Skills</div>
-  </div>
-
-  <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Rust</li>
-    <li>Go</li>
-    <li>Solidity</li>
-    <li>Node.js</li>
-    <li>Python</li>
-    <li>Hyperledger Fabric</li>
-    <li>R3 Corda</li>
-    <li>Hyperledger Besu</li>
-    <li>Ethereum</li>
-    <li>llama.cpp</li>
-    <li>transformers</li>
-    <li>Dialogflow</li>
-    <li>Microsoft Bot Framework</li>
-    <li>yellow.ai</li>
-    <li>EVM Chains</li>
-    <li>Polkadot</li>
-  </ul>
 
   <!-- Add the button -->
   <div class="mb-10">
-    <button id="download" class="px-4 py-2 bg-blue-500 text-white rounded">Download as PDF</button>
+    <button id="download" class="download px-4 py-2 bg-blue-500 text-white rounded">Download as PDF</button>
   </div>
 </BaseLayout>
 
 <!-- Add the script -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js" defer></script>
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const button = document.getElementById('download');
-    if (button) {
-      button.addEventListener('click', () => {
-        const element = document.querySelector('body');
-        html2pdf().from(element).save('sk-resume.pdf');
-      });
-    } else {
-      console.error("Button with id 'download' not found.");
-    }
+  const buttons = document.querySelectorAll('button.download');
+
+  // Handle clicks on each button.
+  buttons.forEach((button) => {
+    button.addEventListener('click', () => {
+       if (typeof html2pdf !== 'undefined') {
+          const element = document.getElementById('resume-content');
+          html2pdf().from(element).set({
+            margin: 1,
+            filename: 'sk-resume.pdf',
+            html2canvas: { scale: 2 },
+            jsPDF: { orientation: 'portrait' }
+          }).save();
+        } else {
+          console.error("html2pdf is not loaded.");
+        }
+    });
   });
 </script>
